--- a/src/pages/Home/Landing/Head.css
+++ b/src/pages/Home/Landing/Head.css
@@ -185,8 +185,8 @@
 
 @media (max-width: 428px) {
   .land__Head {
-    padding: 0 20px 0;
-    min-height: 420px;
+    padding: 120px 20px 40px;
+    min-height: auto;
   }
 
   .land__Head .logo__container {
@@ -198,12 +198,16 @@
     font-size: var(--head1);
   }
 
+  .headBtn {
+    gap: 1rem;
+  }
+
   .land__Head p {
     font-size: var(--paragraph1);
   }
 
   .headBtn button {
-    width: 150px;
+    width: 100%;
     font-size: var(--cta);
   }
 }
